--- a/alis.conf
+++ b/alis.conf
@@ -5,7 +5,7 @@ LOG="false"
 # partition
 DEVICE="/dev/sda"
 LVM="true"
-PARTITION_ROOT_ENCRYPTION_PASSWORD="archlinux"
+PARTITION_ROOT_ENCRYPTION_PASSWORD="password"
 FILE_SYSTEM_TYPE="ext4" # ext4 btrfs xfs
 SWAP_SIZE="" # 2GiB 4GiB 8GiB (not supported in btrfs)
 
@@ -30,11 +30,11 @@ KEYMAP="KEYMAP=us"
 FONT=""
 FONT_MAP=""
 HOSTNAME="archlinux"
-ROOT_PASSWORD="Moue01" # Warning: change it!
+ROOT_PASSWORD="password" # Warning: change it!
 
 # user
 USER_NAME="crumbym"
-USER_PASSWORD="Mouse01"
+USER_PASSWORD="password"
 ADDITIONAL_USER_NAMES="" # list separated by space
 ADDITIONAL_USER_PASSWORDS="" # list separated by space
 
